[tool.poetry]
name = "multiprocessing-threads-asyncio"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "multiprocessing_threads_asyncio"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
lxml = "^4.9.2"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
